<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DevDrawer2</string>

    <string name="pref_show_activity_choice">showActivityChoice</string>
    <bool name="pref_show_activity_choice_default">false</bool>

    <string name="pref_launch_intents" translatable="false">launchingIntents</string>
    <string name="pref_launch_intents_default" translatable="false">@string/launch_intent_aosp</string>
    <string name="launch_intent_aosp">aosp</string>
    <string name="launch_intent_devdrawer">devdrawer</string>
    <array name="launch_intent_labels">
        <item>AOSP Launcher</item>
        <item>DevDrawer Original Config</item>
    </array>
    <array name="launch_intent_values">
        <item>@string/launch_intent_aosp</item>
        <item>@string/launch_intent_devdrawer</item>
    </array>

    <string name="pref_sort_order" translatable="false">sort_order</string>
    <string name="pref_sort_order_default" translatable="false">@string/sort_order_last_updated</string>
    <string name="sort_order_last_updated" translatable="false">LAST_UPDATED</string>
    <string name="sort_order_first_installed" translatable="false">FIRST_INSTALLED</string>
    <string name="sort_order_name" translatable="false">NAME</string>
    <string name="sort_order_package_name" translatable="false">PACKAGE_NAME</string>
    <array name="sort_order_labels">
        <item>Last updated</item>
        <item>First installed</item>
        <item>Name</item>
        <item>Package name</item>
    </array>
    <array name="sort_order_values">
        <item>@string/sort_order_last_updated</item>
        <item>@string/sort_order_first_installed</item>
        <item>@string/sort_order_name</item>
        <item>@string/sort_order_package_name</item>
    </array>

    <string name="pref_theme" translatable="false">theme</string>
    <string name="pref_theme_default" translatable="false">@string/theme_light</string>

    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <array name="widget_themes">
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
    </array>
    <string name="no_main_activity_could_be_found">No main activity could be found.\nEnable the activity chooser dialog.</string>

    <!-- New -->
    <string name="packagefilter">PACKAGE FILTER:</string>
    <string name="change">Change</string>
    <string name="edit_filter">Edit filter</string>
    <string name="delete_filter">Delete filter</string>
    <string name="package_filter_hint">com.example.*</string>
    <string name="settings">Settings</string>
    <string name="app_info">App info</string>

    <!--  widget content descriptions  -->
    <string name="cdesc_uninstall">Uninstall</string>
    <string name="cdesc_settings">settings</string>

</resources>
